<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:text="@string/text_done"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_margin="2dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/shape_devider_gray"/>

    <ScrollView
        android:id="@+id/sv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp">
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="350dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/sentence_functionality_not_yet_added"/>
    </ScrollView>


    <LinearLayout
        android:id="@+id/llyt_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_negative_feedback"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/effect_button_white_no_border"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/text_deny"/>

        <TextView
            android:id="@+id/tv_positive_feedback"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/effect_button_primary_no_border"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:text="@string/text_accept"/>

    </LinearLayout>
</LinearLayout>
