<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartalgorithms.tousidestest.Home.HomeActivity">

    <LinearLayout
        android:id="@+id/llyt_toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorLightBlue"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/img_logo"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textColor="@color/colorDarkGray"
            android:text="@string/text_app_title"
            android:layout_gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlyt_select_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llyt_toolbar"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_select_input"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="128dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img_plus"
            />
        <TextView
            android:id="@+id/tv_select_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_select_input"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textColor="@color/colorDarkGray"
            android:text="@string/text_select_input"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/tv_request_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_select_input"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textColor="@color/colorDarkGray"
            android:text="@string/text_request_permissions"
            android:gravity="center_horizontal"
            android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llyt_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/llyt_toolbar"
        android:padding="16dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/colorGray"
            android:textSize="16sp"
            android:text="@string/text_output"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_gray_border_white_bg"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorDarkGray"
                android:text="@string/text_most_frequent_word"
                />

            <RelativeLayout
                android:id="@+id/rlyt_res_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_score_res_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorDarkGray"
                    android:visibility="gone"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lav_loading_res_1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_centerInParent="true"
                    app:lottie_colorFilter="@color/colorGray"
                    app:lottie_loop="true" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_gray_border_white_bg"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorDarkGray"
                android:text="@string/text_most_frequent_word_7_chars"
                />

            <RelativeLayout
                android:id="@+id/rlyt_res_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_score_res_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorDarkGray"
                    android:visibility="gone"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lav_loading_res_2"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_centerInParent="true"
                    app:lottie_colorFilter="@color/colorPrimary"
                    app:lottie_loop="true" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_gray_border_white_bg"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorDarkGray"
                android:text="@string/text_highest_scoring_words"
                />

            <RelativeLayout
                android:id="@+id/rlyt_res_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ListView
                    android:id="@+id/lv_score_res_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lav_loading_res_3"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_centerInParent="true"
                    app:lottie_colorFilter="@color/colorAccent"
                    app:lottie_loop="true" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/effect_button_primary_no_border"
            android:text="@string/text_reset"/>

    </LinearLayout>

</RelativeLayout>
